TEST_PROGRAMS/INVALID/yu_hua/b.min
if 0 then
  print "no";
endif;
